recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:11: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4)
    ^HexaKoch:13: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4)
    ^HexaKoch:15: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4)
    ^HexaKoch:17: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4)
    ^HexaKoch:19: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4)
    ^