recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.code
def drawCurve(levels:Int, length:Double) {
    hexaKoch(levels, length);
}
def hexaKoch(levels:Int, length:Double) {
  if (levels==0){
    avance(length)
  }
  else{
    hexaKoch(levels-1,length*0.4)
    gauche(120.0)
    pentaKoch(levels-1,length*0.4)
    droite(60.0)
    pentaKoch(levels-1,length*0.4)
    droite(60.0)
    pentaKoch(levels-1,length*0.4)
    droite(60.0)
    pentaKoch(levels-1,length*0.4)
    gauche(120.0)
    pentaKoch(levels-1,length*0.4)
    
  }
}